adding required files

--- a/lang/de.json
+++ b/lang/de.json
@@ -1,8 +1,53 @@
 {
-  "welcome_title": "Willkommen!",
-  "welcome_desc": "Wir exportieren hochwertige Gewürze, ätherische Öle und getrocknete Kräuter mit schneller, zuverlässiger Lieferung weltweit.",
+  "brand_name": "Amutham",
+  "nav_home": "Startseite",
+  "nav_spices": "Gewürze",
+  "nav_oils": "Ätherische Öle",
+  "nav_herbs": "Getrocknete Kräuter",
+  "get_quote": "Angebot einholen",
+  "buy_now": "Jetzt kaufen",
+
+  "home_title": "Willkommen bei Amutham Food Products",
+  "home_intro": "Wir liefern hochwertige Gewürze, getrocknete Kräuter und ätherische Öle aus Indien in die ganze Welt.",
+
   "spices_title": "Gewürze",
   "spices_intro": "Wir liefern verschiedene Gewürze, darunter Kurkuma, Schwarzer Kurkuma, Schwarzer Ingwer, Chili, Muskat, Koriander, Kardamom, Nelken, Zimt, Kreuzkümmel, Ajowan, Bockshornklee, Ingwer und Schwarzer Pfeffer.",
+
   "turmeric_title": "Kurkuma",
-  "turmeric_desc": "Kurkuma, ein goldgelbes Gewürz aus Curcuma longa, wird wegen seines erdigen Geschmacks, seiner natürlichen Färbung und seiner traditionellen kulinarischen Verwendung geschätzt."
+  "turmeric_desc": "Kurkuma, ein goldgelbes Gewürz aus Curcuma longa, ist für seinen erdigen Geschmack, seine natürliche Färbung und seine traditionelle kulinarische Verwendung geschätzt.",
+
+  "black_turmeric_title": "Schwarzer Kurkuma",
+  "black_turmeric_desc": "Schwarzer Kurkuma (Curcuma caesia Roxb., oder Schwarzer Zedoar) ist ein industriell wichtiges, stark gefährdetes Kraut.",
+
+  "black_ginger_title": "Schwarzer Ingwer",
+  "black_ginger_desc": "Schwarzer Ingwer (Kaempferia parviflora) ist eine seltene Wurzel aus Thailand, die für Vitalität, Ausdauer und allgemeines Wohlbefinden verwendet wird.",
+
+  "chilli_title": "Chili",
+  "chilli_desc": "Chili, gewonnen aus Capsicum-Arten, ist bekannt für seine Schärfe, seine leuchtende Farbe und seine wichtige Rolle in globalen kulinarischen Traditionen."
+
+  "oils_title": "Ätherische Öle",
+  "oils_intro": "Wir liefern reine und natürliche ätherische Öle, die in Aromatherapie, Kosmetik, Wellness und natürlichen Formulierungen verwendet werden.",
+
+  "lavender_oil_title": "Lavendelöl",
+  "lavender_oil_desc": "Lavendelöl ist für sein beruhigendes Aroma bekannt und wird häufig für Entspannung, Hautpflege und Wellness eingesetzt.",
+
+  "peppermint_oil_title": "Pfefferminzöl",
+  "peppermint_oil_desc": "Pfefferminzöl wirkt erfrischend und kühlend und ist beliebt in Aromatherapie, Mundpflege und Küche.",
+
+  "eucalyptus_oil_title": "Eukalyptusöl",
+  "eucalyptus_oil_desc": "Eukalyptusöl wird für seinen belebenden Duft und die traditionelle Anwendung bei Atemwegsgesundheit und Reinigung geschätzt.",
+
+
+  "herbs_title": "Getrocknete Kräuter",
+  "herbs_intro": "Wir liefern sorgfältig getrocknete Kräuter, die Aroma, Geschmack und Nährstoffe für Küche und Wellness bewahren.",
+
+  "basil_title": "Basilikum",
+  "basil_desc": "Getrocknetes Basilikum verleiht süße, aromatische Noten und wird in Soßen, Suppen und Tees verwendet.",
+
+  "oregano_title": "Oregano",
+  "oregano_desc": "Oregano ist ein geschmacksintensives getrocknetes Kraut, weit verbreitet in mediterraner und internationaler Küche.",
+
+  "mint_title": "Minze",
+  "mint_desc": "Getrocknete Minze ist erfrischend, aromatisch und wird häufig in Tees, Getränken und traditionellen Kräuterpräparaten verwendet."
 }
+
