--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,8 +1,53 @@
 {
-  "welcome_title": "Bienvenue!",
-  "welcome_desc": "Nous exportons des épices, huiles essentielles et herbes séchées de haute qualité avec une expédition rapide et fiable dans le monde entier.",
+  "brand_name": "Amutham",
+  "nav_home": "Accueil",
+  "nav_spices": "Épices",
+  "nav_oils": "Huiles essentielles",
+  "nav_herbs": "Herbes séchées",
+  "get_quote": "Obtenir un devis",
+  "buy_now": "Acheter",
+
+  "home_title": "Bienvenue chez Amutham Food Products",
+  "home_intro": "Nous livrons des épices, des herbes séchées et des huiles essentielles de haute qualité de l'Inde au monde.",
+
   "spices_title": "Épices",
-  "spices_intro": "Nous fournissons plusieurs variétés d'épices, y compris le curcuma, le curcuma noir, le gingembre noir, le piment, la noix de muscade, la coriandre, la cardamome, le clou de girofle, la cannelle, le cumin, l'ajowan, le fenugrec, le gingembre et le poivre noir.",
+  "spices_intro": "Nous fournissons plusieurs variétés d'épices, y compris le curcuma, le curcuma noir, le gingembre noir, le piment, la muscade, la coriandre, la cardamome, le clou de girofle, la cannelle, le cumin, l'ajowan, le fenugrec, le gingembre et le poivre noir.",
+
   "turmeric_title": "Curcuma",
-  "turmeric_desc": "Le curcuma, une épice jaune doré de Curcuma longa, est apprécié pour sa saveur terreuse, sa coloration naturelle et son utilisation culinaire traditionnelle."
+  "turmeric_desc": "Le curcuma, une épice jaune doré de Curcuma longa, est apprécié pour sa saveur terreuse, sa coloration naturelle et son utilisation culinaire traditionnelle.",
+
+  "black_turmeric_title": "Curcuma noir",
+  "black_turmeric_desc": "Le curcuma noir (Curcuma caesia Roxb., ou zédoaire noir) est une herbe en danger critique d'importance industrielle.",
+
+  "black_ginger_title": "Gingembre noir",
+  "black_ginger_desc": "Le gingembre noir (Kaempferia parviflora) est une racine rare originaire de Thaïlande, utilisée pour la vitalité, l'endurance et le bien-être général.",
+
+  "chilli_title": "Piment",
+  "chilli_desc": "Le piment, dérivé des espèces de Capsicum, est apprécié pour sa chaleur ardente, sa couleur vibrante et son rôle essentiel dans les traditions culinaires mondiales."
+
+  "oils_title": "Huiles essentielles",
+  "oils_intro": "Nous fournissons des huiles essentielles pures et naturelles largement utilisées en aromathérapie, cosmétique, bien-être et formulations naturelles.",
+
+  "lavender_oil_title": "Huile de lavande",
+  "lavender_oil_desc": "L'huile de lavande est connue pour son arôme apaisant et est utilisée pour la détente, les soins de la peau et le bien-être.",
+
+  "peppermint_oil_title": "Huile de menthe poivrée",
+  "peppermint_oil_desc": "L'huile de menthe poivrée apporte un effet rafraîchissant et est appréciée en aromathérapie, soins bucco-dentaires et cuisine.",
+
+  "eucalyptus_oil_title": "Huile d'eucalyptus",
+  "eucalyptus_oil_desc": "L'huile d'eucalyptus est appréciée pour son parfum vivifiant et son utilisation traditionnelle dans le bien-être respiratoire et le nettoyage.",
+
+
+  "herbs_title": "Herbes séchées",
+  "herbs_intro": "Nous fournissons des herbes soigneusement séchées qui conservent leur arôme, saveur et nutriments naturels pour la cuisine et le bien-être.",
+
+  "basil_title": "Basilic",
+  "basil_desc": "Le basilic séché ajoute des notes sucrées et aromatiques aux plats, largement utilisé dans les sauces, soupes et tisanes.",
+
+  "oregano_title": "Origan",
+  "oregano_desc": "L'origan est une herbe séchée savoureuse, utilisée dans les cuisines méditerranéennes et mondiales pour son arôme et son goût prononcés.",
+
+  "mint_title": "Menthe",
+  "mint_desc": "La menthe séchée est rafraîchissante et aromatique, largement utilisée dans les thés, boissons et préparations à base de plantes."
 }
+
